@@ -72,6 +72,9 @@ Release 2.8.0 - UNRELEASED
 
     HDFS-8856. Make LeaseManager#countPath O(1). (Arpit Agarwal)
 
+    HDFS-8696. Make the lower and higher watermark in the DN Netty server
+    configurable. (Xiaobing Zhou via Haohui Mai)
+
   BUG FIXES
 
     HDFS-7701. Support reporting per storage type quota and usage
